tests/errors/const_assign.vt
const MAX: int = 10; fn main(){ MAX = 5; }
